fixed spacing in requested items page. fix batch buttons at bottom of list. fixed book cart count

--- a/vufind/web/interface/themes/einetwork/css/styles.css
+++ b/vufind/web/interface/themes/einetwork/css/styles.css
@@ -2962,3 +2962,21 @@ ul.new-alert-box li {
 #temp-changes a:hover {
 	text-decoration: none;
 }
+
+.holdsUpdateBranchSelection {
+	float:right;
+	clear:left;
+	margin-top:20px;
+} 
+
+.holdsUpdateBranchSelection-Large {
+	float:right;
+	clear:left;
+	margin-top:45px;
+} 
+
+.requested_update_check {
+	float:right;
+	width:100px;
+	margin-top:20px;
+}
